--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -21,5 +22,3 @@
     "typescript": "^5.5.4"
   }
 }
-
-
